--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       content="Web site created using create-react-app"
     />
     <title>Prepr Challenge</title>
+    <link rel="icon" href="./Jason_Huang_FrontEnd_Developer_logo.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
